--- a/aten/src/THC/THCGeneral.h.in
+++ b/aten/src/THC/THCGeneral.h.in
@@ -3,7 +3,6 @@
 
 #include <TH/THGeneral.h>
 #include "THAllocator.h"
-#include "THCThreadLocal.h"
 #undef log10
 #undef log1p
 #undef log2
@@ -117,7 +116,6 @@ at::DataPtr THCudaHostAlloc(THCState *state, size_t size);
 
 THC_API void THCudaHostRecord(THCState *state, void *ptr);
 
-THC_API cudaError_t THCudaMemGetInfo(THCState *state, size_t* freeBytes, size_t* totalBytes);
-THC_API cudaError_t THCudaMemGetInfoCached(THCState *state, size_t* freeBytes, size_t* totalBytes, size_t* largestBlock);
+THC_API cudaError_t THCudaMemGetInfo(THCState *state, size_t* freeBytes, size_t* totalBytes, size_t* largestBlock);
 
 #endif
