--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -305,7 +305,7 @@
   self: grad.mv(vec2)
   vec2: grad.t().mv(self)
 
-- name: _gesv_single(Tensor self, Tensor A)
+- name: _th_gesv_single(Tensor self, Tensor A)
   self: gesv_backward_self(grad, self, A)
   A: gesv_backward_A(grad, self, A, solution)
 
