--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1978,6 +1978,8 @@
     - method
 
 # NB: Does NOT check precondition that numel == 1
+# WARNING: Use of cpu_half here is generally not supported; please
+# don't use it.
 - func: _local_scalar_dense(Tensor self) -> Scalar
   cpu_half: True
   dispatch:
