--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -711,7 +711,7 @@
 
 - func: gesv(Tensor self, Tensor A) -> (Tensor, Tensor)
 
-- func: gesv_out(Tensor solution, Tensor lu, Tensor self, Tensor A) -> (Tensor, Tensor)
+- func: gesv_out(Tensor result0, Tensor result1, Tensor self, Tensor A) -> (Tensor, Tensor)
   variants: function
 
 # gesv handles broadcasting of arbitrary batch dims while _gesv_helper does not.
@@ -720,11 +720,16 @@
     CPU: _gesv_helper_cpu
     CUDA: _gesv_helper_cuda
 
-- func: _gesv_single_helper_out(Tensor result0, Tensor result1, Tensor self, Tensor A) -> (Tensor, Tensor)
+- func: _gesv_single(Tensor self, Tensor A) -> (Tensor, Tensor)
+  dispatch:
+    CPU: _gesv_single_cpu
+    CUDA: _gesv_single_cuda
+
+- func: _gesv_single_out(Tensor result0, Tensor result1, Tensor self, Tensor A) -> (Tensor, Tensor)
   variants: function
   dispatch:
-    CPU: _gesv_single_helper_out_cpu
-    CUDA: _gesv_single_helper_out_cuda
+    CPU: _gesv_single_out_cpu
+    CUDA: _gesv_single_out_cuda
 
 - func: group_norm(Tensor input, int64_t num_groups, Tensor? weight={}, Tensor? bias={}, double eps=1e-5, bool cudnn_enabled=True) -> Tensor
   variants: function
