Make sure all the ATen source code is built by HCC, but ignore the header files.

--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -264,9 +264,21 @@ if(USE_ROCM)
   IF(BUILD_ATEN)
      HIP_INCLUDE_DIRECTORIES(${Caffe2_HIP_INCLUDES})
   ENDIF()
-  IF(BUILD_CAFFE2)
-     set_source_files_properties(${Caffe2_HIP_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
-  ENDIF()
+
+  # Essentially, treat all files as hip compilable source code.
+  set_source_files_properties(${Caffe2_HIP_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
+
+  # Strip out all *.h files from the source list added from ATen files.
+  if(BUILD_ATEN)
+    foreach(hip_source ${Caffe2_HIP_SRCS})
+      get_filename_component(extension ${hip_source} EXT)
+      if (${extension} MATCHES "\\.h$")
+        # Set to 0 to disable device compilation of regular header files.
+        set_source_files_properties(${hip_source} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 0)
+      endif()
+    endforeach()
+  endif()
+
   hip_add_library(caffe2_hip ${Caffe2_HIP_SRCS})
 
   # Since PyTorch files contain HIP headers, these flags are required for the necessary definitions to be added.
