--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,4 +20,4 @@ workflows:
       - linux_trusty_py3_6_gcc7_build
           - filters:
               branches:
-                only: circleci
+                only: /circleci/
