--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,7 @@ workflows:
   version: 2
   linux_trusty_py3_6_gcc7:
     jobs:
-      - linux_trusty_py3_6_gcc7_build
+      - linux_trusty_py3_6_gcc7_build:
+          - filters:
+              branches:
+                only: circleci
