--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,11 @@ jobs:
           aws_secret_access_key: $CIRCLECI_AWS_SECRET_KEY
     resource_class: large
     steps:
+    - checkout
     - run:
         name: Build
         command: |
           export SCCACHE_BUCKET=ossci-compiler-cache
-          find /
           .jenkins/pytorch/build.sh
 workflows:
   version: 2
