--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
         name: Build
         command: |
           export SCCACHE_BUCKET=ossci-compiler-cache
+          git submodule update --init
           .jenkins/pytorch/build.sh
 workflows:
   version: 2
