--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,24 @@ jobs:
           export SCCACHE_BUCKET=ossci-compiler-cache
           git submodule update --init
           .jenkins/pytorch/build.sh
+          .jenkins/pytorch/test.sh
+  linux_xenial_cuda9_2_cudnn7_py3_gcc7:
+    docker:
+      - image: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda9.2-cudnn7-py3-gcc7:226
+        user: jenkins
+        aws_auth:
+          aws_access_key_id: AKIAIUHRTFRLXI6HBUCQ
+          aws_secret_access_key: $CIRCLECI_AWS_SECRET_KEY
+    resource_class: large
+    steps:
+    - checkout
+    - run:
+        name: Build
+        command: |
+          export SCCACHE_BUCKET=ossci-compiler-cache
+          git submodule update --init
+          .jenkins/pytorch/build.sh
+          .jenkins/pytorch/test.sh
 workflows:
   version: 2
   linux_trusty_py3_6_gcc7:
