--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,4 @@ workflows:
   linux_trusty_py3_6_gcc7:
     jobs:
       - linux_trusty_py3_6_gcc7_build:
-          filters:
-            branches:
-              only: circleci
+      - linux_xenial_cuda9_2_cudnn7_py3_gcc7:
