Keep einsum name in ATen
Thanks to fmassa for the suggestion!
if the method to fix it is not as pretty, it is my own fault, though.

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -530,7 +530,7 @@
 - func: dot_out(Tensor result, Tensor self, Tensor tensor) -> Tensor
   variants: function
 
-- func: _einsum(std::string equation, TensorList tensors) -> Tensor
+- func: einsum(std::string equation, TensorList tensors) -> Tensor
   variants: function
 
 - func: embedding(Tensor weight, IndexTensor indices, int64_t padding_idx=-1, bool scale_grad_by_freq=false, bool sparse=false) -> Tensor
