--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,12 +31,15 @@ jobs:
         name: Build
         command: |
           export SCCACHE_BUCKET=ossci-compiler-cache
+          touch foo
+          aws s3 cp foo s3://ossci-linux-build/pytorch/foo
           git submodule update --init
           .jenkins/pytorch/build.sh
-          .jenkins/pytorch/test.sh
+          tar czf circleci-${CIRCLE_BUILD_NUM}.tgz $HOME/.local/lib/python*/site-packages/torch*
+          aws s3 cp circleci-${CIRCLE_BUILD_NUM}.tgz s3://ossci-linux-build/pytorch/circleci-${CIRCLE_BUILD_NUM}.tgz --acl public-read
 workflows:
   version: 2
-  linux_trusty_py3_6_gcc7:
+  build:
     jobs:
       - linux_trusty_py3_6_gcc7_build
       - linux_xenial_cuda9_2_cudnn7_py3_gcc7
