--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,3 +56,4 @@ workflows:
     jobs:
       - linux_trusty_py3_6_gcc7_build
       - linux_xenial_cuda9_2_cudnn7_py3_gcc7
+      - macos_10_13_py3
