--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,13 +36,29 @@ jobs:
           #tar czf circleci-${CIRCLE_BUILD_NUM}.tgz $HOME/.local/lib/python*/site-packages/torch*
           mkdir -p $HOME/.local/flub
           touch $HOME/.local/flub/foo
-          mkdir -p workspace
-          tar czf workspace/flub.tgz $HOME/.local/flub
+          touch $HOME/.local/flub/bar
     - persist_to_workspace:
         #root: $HOME/.local/lib/python3.6/site-packages/
-        root: workspace
+        root: $HOME/.local/flub
         paths:
-          - flub.tgz
+          - *
+  linux_xenial_cuda9_2_cudnn7_py3_gcc7_test:
+    docker:
+      - image: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda9.2-cudnn7-py3-gcc7:226
+        user: jenkins
+        aws_auth:
+          aws_access_key_id: AKIAIUHRTFRLXI6HBUCQ
+          aws_secret_access_key: $CIRCLECI_AWS_SECRET_KEY
+    resource_class: gpu.small
+    steps:
+    - checkout
+    - attach_workspace:
+        at: $HOME/.local/flub
+    - run:
+        name: Build
+        command: |
+          #git submodule update --init
+          ls ~/.local/flub
   macos_10_13_py3:
     macos:
       xcode: "9.0"
@@ -63,4 +79,7 @@ workflows:
     jobs:
       - linux_trusty_py3_6_gcc7_build
       - linux_xenial_cuda9_2_cudnn7_py3_gcc7_build
+      - linux_xenial_cuda9_2_cudnn7_py3_gcc7_test:
+        requires:
+          - linux_xenial_cuda9_2_cudnn7_py3_gcc7_build
       - macos_10_13_py3
