--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           touch $HOME/.local/flub/bar
     - persist_to_workspace:
         #root: $HOME/.local/lib/python3.6/site-packages/
-        root: $HOME/.local/flub
+        root: /var/lib/jenkins/.local/flub
         paths:
           - "*"
   linux_xenial_cuda9_2_cudnn7_py3_gcc7_test:
@@ -70,7 +70,7 @@ jobs:
             export SCCACHE_BUCKET=ossci-compiler-cache
             export BUILD_ENVIRONMENT=pytorch-macos-10.13-py3
             export DEVELOPER_DIR=/Applications/Xcode.app/Contents/Developer/
-            find -name /Applications
+            find /Applications
             git submodule update --init
             chmod a+x .jenkins/pytorch/macos-build.sh
             .jenkins/pytorch/macos-build.sh
