--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
     steps:
     - checkout
     - attach_workspace:
-        at: $HOME/.local/flub
+        at: /var/lib/jenkins/.local/flub
     - run:
         name: Build
         command: |
@@ -69,8 +69,6 @@ jobs:
           command: |
             export SCCACHE_BUCKET=ossci-compiler-cache
             export BUILD_ENVIRONMENT=pytorch-macos-10.13-py3
-            export DEVELOPER_DIR=/Applications/Xcode.app/Contents/Developer/
-            find /Applications
             git submodule update --init
             chmod a+x .jenkins/pytorch/macos-build.sh
             .jenkins/pytorch/macos-build.sh
