--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -249,7 +249,7 @@
 - func: blackman_window(int64_t window_length, bool periodic, TensorOptions options={}) -> Tensor
   variants: function
 
-- func: broadcast_all(TensorList tensors) -> TensorList
+- func: broadcast_tensors(TensorList tensors) -> TensorList
   variants: function
 
 - func: cat(TensorList tensors, int64_t dim=0) -> Tensor
