--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,17 +38,35 @@ jobs:
         paths:
           - "*"
   linux_xenial_cuda9_2_cudnn7_py3_gcc7_test:
-    docker:
-      - image: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda9.2-cudnn7-py3-gcc7:226
-        user: jenkins
-        aws_auth:
-          aws_access_key_id: AKIAIUHRTFRLXI6HBUCQ
-          aws_secret_access_key: $CIRCLECI_AWS_SECRET_KEY
+    machine:
+      image: default
+      resource_class: gpu.small
+      working_directory: /tmp
+#   docker:
+#     - image: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda9.2-cudnn7-py3-gcc7:226
+#       user: jenkins
+#       aws_auth:
+#         aws_access_key_id: AKIAIUHRTFRLXI6HBUCQ
+#         aws_secret_access_key: $CIRCLECI_AWS_SECRET_KEY
     resource_class: gpu.small
     steps:
     - checkout
-    - attach_workspace:
-        at: /opt/conda/lib/python3.6/site-packages/torch
+    - run:
+        name: Build
+        command: |
+          sudo pip install awscli
+          export AWS_ACCESS_KEY_ID=AKIAIUHRTFRLXI6HBUCQ
+          export AWS_SECRET_ACCESS_KEY=$CIRCLECI_AWS_SECRET_KEY
+          eval $(aws ecr get-login --region us-east-1 --no-include-email)
+          docker pull 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda9.2-cudnn7-py3-gcc7:226
+          id=$(docker run --runtime=nvidia -t -d -w /var/lib/jenkins 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda9.2-cudnn7-py3-gcc7:226)
+          docker cp "$CIRCLE_WORKING_DIRECTORY/." "$id:/var/lib/jenkins/workspace"
+          echo "mkdir -p /opt/conda/lib/python3.6/site-packages" | docker exec -u jenkins -i "$id" bash
+          docker cp "/opt/workspace" "$id:/opt/conda/lib/python3.6/site-packages/torch"
+          (echo "export SCCACHE_BUCKET=$SCCACHE_BUCKET" && echo 'sudo chown -R jenkins workspace /opt/conda/lib/python3.6/site-packages/torch && cd workspace && git submodule update --init && .jenkins/pytorch/test.sh') | docker exec -u jenkins -i "$id" bash
+    - checkout
+#   - attach_workspace:
+#       at: /opt/workspace
     - run:
         name: Build
         command: |
@@ -73,6 +91,6 @@ workflows:
       - linux_trusty_py3_6_gcc7_build
       - linux_xenial_cuda9_2_cudnn7_py3_gcc7_build
       - linux_xenial_cuda9_2_cudnn7_py3_gcc7_test:
-          requires:
-            - linux_xenial_cuda9_2_cudnn7_py3_gcc7_build
+#         requires:
+#           - linux_xenial_cuda9_2_cudnn7_py3_gcc7_build
       - macos_10_13_py3
