Time to install the driver.
Signed-off-by: Edward Z. Yang <ezyang@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,9 +60,9 @@ jobs:
           echo "deb https://nvidia.github.io/nvidia-container-runtime/ubuntu14.04/amd64 /" | sudo tee -a /etc/apt/sources.list.d/nvidia-docker.list
           echo "deb https://nvidia.github.io/nvidia-docker/ubuntu14.04/amd64 /" | sudo tee -a /etc/apt/sources.list.d/nvidia-docker.list
           sudo apt-get update
-          #sudo apt-get install linux-headers-$(uname -r)
-          #wget 'https://s3.amazonaws.com/ossci-linux/nvidia_driver/NVIDIA-Linux-x86_64-396.26.run'
-          #sudo /bin/bash ./NVIDIA-Linux-x86_64-396.26.run -s
+          sudo apt-get install linux-headers-$(uname -r)
+          wget 'https://s3.amazonaws.com/ossci-linux/nvidia_driver/NVIDIA-Linux-x86_64-396.26.run'
+          sudo /bin/bash ./NVIDIA-Linux-x86_64-396.26.run -s
           sudo apt-get install -y nvidia-docker2
           sudo pkill -SIGHUP dockerd
           nvidia-smi
