--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1440,7 +1440,7 @@
     CPU: _tanh_out_cpu
     CUDA: _tanh_out_cuda
 
-- func: _tensordot(Tensor self, Tensor other, IntList dims_self, IntList dims_other) -> Tensor
+- func: tensordot(Tensor self, Tensor other, IntList dims_self, IntList dims_other) -> Tensor
   variants: function
 
 - func: transpose(Tensor self, int64_t dim0, int64_t dim1) -> Tensor
