--- a/torch/CMakeLists.txt
+++ b/torch/CMakeLists.txt
@@ -378,6 +378,10 @@ if (NOT MSVC AND NOT APPLE AND NOT USE_ROCM)
     target_link_libraries(test_jit ${CUDA_LIBRARIES})
   endif()
 
+  install(TARGETS test_jit
+    RUNTIME DESTINATION "${TORCH_INSTALL_BIN_DIR}"
+    LIBRARY DESTINATION "${TORCH_INSTALL_LIB_DIR}"
+    ARCHIVE DESTINATION "${TORCH_INSTALL_LIB_DIR}")
 endif()
 
 if (BUILD_TORCH_TEST AND NOT NO_API AND NOT USE_ROCM)
@@ -431,4 +435,8 @@ if (BUILD_TORCH_TEST AND NOT NO_API AND NOT USE_ROCM)
     endif()
   endif()
 
+  install(TARGETS test_api
+    RUNTIME DESTINATION "${TORCH_INSTALL_BIN_DIR}"
+    LIBRARY DESTINATION "${TORCH_INSTALL_LIB_DIR}"
+    ARCHIVE DESTINATION "${TORCH_INSTALL_LIB_DIR}")
 endif()
