--- a/.gitmodules
+++ b/.gitmodules
@@ -81,7 +81,7 @@
 [submodule "third_party/sleef"]
     ignore = dirty
     path = third_party/sleef
-    url = https://github.com/shibatch/sleef
+    url = https://github.com/zdevito/sleef
 [submodule "third_party/ideep"]
     ignore = dirty
     path = third_party/ideep
@@ -105,7 +105,7 @@
 [submodule "third_party/fbgemm"]
     ignore = dirty
     path = third_party/fbgemm
-    url = https://github.com/pytorch/fbgemm
+    url = https://github.com/jspark1105/fbgemm
 [submodule "third_party/foxi"]
     ignore = dirty
     path = third_party/foxi
